<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/edit_PrimeiroNome"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/app_name_PrimeiroNome"
        android:inputType="textPersonName"
        android:textColor="#8D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_SegundoNome"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/app_name_SegundoNome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#8D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_PrimeiroNome"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtListaSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Selecione um curso"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_TelefoneContato"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_Finalizar"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginBottom="188dp"
        android:text="Finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_CursoDesejado"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/app_name_CursoInteresse"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#8D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_SegundoNome"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_Limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="Limpar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinnerCursos"
        android:layout_width="354dp"
        android:layout_height="48dp"
        android:layout_margin="16sp"
        android:layout_marginHorizontal="16sp"
        android:layout_marginVertical="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtListaSpinner"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edit_TelefoneContato"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/app_name_TelefoneContato"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#8D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_CursoDesejado"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="100dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:text="App Lista Curso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Salvar"
        android:layout_width="96dp"
        android:layout_height="52dp"
        android:layout_marginBottom="120dp"
        android:text="Salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>